ghc (7.6.3-3) UNRELEASED; urgency=low

  * Add patches/Handle-sign-bit-when-generating-veneer-for-ARM-Thumb.patch,
    patch by Colin Watson

 -- Joachim Breitner <nomeata@debian.org>  Wed, 05 Jun 2013 20:48:20 +0200

ghc (7.6.3-2) unstable; urgency=low

  * Enable compat level 9
  * Remove transitional ghc6-* packages

 -- Joachim Breitner <nomeata@debian.org>  Fri, 24 May 2013 11:12:19 +0200

ghc (7.6.3-1) experimental; urgency=low

  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Sun, 21 Apr 2013 19:12:24 +0200

ghc (7.6.2-1) experimental; urgency=low

  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Tue, 29 Jan 2013 21:16:52 +0100

ghc (7.6.1.20121207-2) experimental; urgency=low

  * Typo in ghc-haddock’s Provides, thanks to David Fox for noticing.

 -- Joachim Breitner <nomeata@debian.org>  Thu, 13 Dec 2012 18:33:48 +0100

ghc (7.6.1.20121207-1) experimental; urgency=low

  * New upstream release (aka 7.6.1-rc).
    + Closes: #677096 (huge number of wakeups)
  * Remove debian/patches/armhf_llvm_abi, applied upstream, thanks to Shawn
    Landden for noticing (Closes: #695739)
  * Hardcode in debian/rules that haddock supportin interface version 22 also
    supports interface version 21.

 -- Joachim Breitner <nomeata@debian.org>  Wed, 12 Dec 2012 12:32:48 +0100

ghc (7.6.1-3) experimental; urgency=low

  * Bump standards version, no change
  * Change VCS fields back to regular repo
  * Build the runtime also in the thr_debug_p way, suggestion by Michał J.
    Gajda

 -- Joachim Breitner <nomeata@debian.org>  Tue, 04 Dec 2012 22:00:27 +0100

ghc (7.6.1-2) experimental; urgency=low

  * Do not Provide transformers, it is only used internally.
  * Ensure this is not used with unstable’s haskell-devscripts

 -- Joachim Breitner <nomeata@debian.org>  Mon, 08 Oct 2012 22:41:46 +0200

ghc (7.6.1-1) experimental; urgency=low

  * New upstream release
    Dropped patches, applied upstream: