@@ -2,6 +2,8 @@ ghc (7.6.3-3) UNRELEASED; urgency=low
 
   * Add patches/Handle-sign-bit-when-generating-veneer-for-ARM-Thumb.patch,
     patch by Colin Watson
+  * Disable GHCi on arm, as it is severly borken (for more information see
+    http://hackage.haskell.org/trac/ghc/ticket/7794)
 
  -- Joachim Breitner <nomeata@debian.org>  Wed, 05 Jun 2013 20:48:20 +0200
 
